Made the app server side rendered
This will provide an easier base to work with. We don't need the benefits of client side renders since this will mostly be static content.

SSR will actually help here since it is way faster to load.

--- a/Portfolio.Server/Portfolio.Server.csproj
+++ b/Portfolio.Server/Portfolio.Server.csproj
@@ -8,8 +8,15 @@
 
 
     <ItemGroup>
-        <ProjectReference Include="..\Portfolio.Client\Portfolio.Client.csproj"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.*"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.*"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.*"/>
+        <PackageReference Include="MudBlazor" Version="8.13.0"/>
+    </ItemGroup>
+
+
+    <ItemGroup>
+        <AdditionalFiles Include="Components\Layout\MainLayout.razor"/>
+        <AdditionalFiles Include="Components\Layout\NavMenu.razor"/>
     </ItemGroup>
 
 </Project>
