--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <RootNamespace>Portfolio.Server</RootNamespace>
     </PropertyGroup>
 
 
@@ -12,11 +13,4 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.*"/>
         <PackageReference Include="MudBlazor" Version="8.13.0"/>
     </ItemGroup>
-
-
-    <ItemGroup>
-        <AdditionalFiles Include="Components\Layout\MainLayout.razor"/>
-        <AdditionalFiles Include="Components\Layout\NavMenu.razor"/>
-    </ItemGroup>
-
 </Project>
