--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -9,8 +9,9 @@
 
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.*"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.*"/>
-        <PackageReference Include="MudBlazor" Version="8.13.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.*" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.*" />
+        <PackageReference Include="MudBlazor" Version="8.13.0" />
+        <PackageReference Include="MudBlazor.Markdown" Version="8.11.0" />
     </ItemGroup>
 </Project>
